Fixed a spacing issue in landing

--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -170,7 +170,7 @@ link {
       position: fixed;
       left: 0;
       top: 0;
-      width: 100vw;
+      width: 100%;
       border-radius: 0;
       margin: 0;
       box-shadow: #00000056 0px 3px 3px 1px;
