--- a/src/containers/landing.scss
+++ b/src/containers/landing.scss
@@ -5,13 +5,10 @@
 }
 
 .landing {
-  widows: 100vw;
   .spinner {
     width: 100%;
     display: flex;
     justify-content: center;
-
-    padding: 10px;
     height: 300px;
 
     .fa-spinner {
